--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/shopping.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/shopping.js" ></script>
+	<script type="text/javascript" src="js/jquery-ui.js"></script>
 </head>
 <body>
 	<!--This will be the shopping list on the right of the website-->
